syntax = "proto3";

package gidyon.messaging.call;

option go_package="github.com/gidyon/services/pkg/api/messaging/call";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

message CallPayload {
    repeated string destination_phones = 2;
    string keyword = 1;
    string message = 3;
}

service CallAPI {
    rpc Call (CallPayload) returns (google.protobuf.Empty);
}